week9/docker-kubernetes-helm/containerisation/k8s/monitoring/rpc-sample-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: rpc-app
  namespace: default
spec:
  rules:
    - host: rpc-app.devops-masterclass.link
      http:
        paths:
          - backend:
              serviceName: rpc-app-service
              servicePort: 8081
            path: /
  tls:
      - hosts:
          - rpc-app.devops-masterclass.link
        secretName: rpc-app.devops-masterclass.link
